--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "react/jsx-props-no-spreading":"off",
         "react/prop-types":"off",
         "@typescript-eslint/explicit-module-boundary-types":"off",
+        "@typescript-eslint/ban-types":"off",
         "@typescript-eslint/explicit-function-return-type":[
             "error",
             { "allowExpressions": true }
