--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.1-alpha.6",
     "eslint": "^7.22.0",
