--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "react/prop-types":"off",
         "@typescript-eslint/explicit-module-boundary-types":"off",
         "@typescript-eslint/ban-types":"off",
+        "no-unused-expressions":"off",
         "@typescript-eslint/explicit-function-return-type":[
             "error",
             { "allowExpressions": true }
