--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "@typescript-eslint/explicit-module-boundary-types":"off",
         "@typescript-eslint/ban-types":"off",
         "no-unused-expressions":"off",
+        "@typescript-eslint/no-empty-function":"off",
         "@typescript-eslint/explicit-function-return-type":[
             "error",
             { "allowExpressions": true }
