--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuidv4": "^6.2.10",
